Don't clear non-layout-object style for PseudoElements.

They are only used for storing an extra ComputedStyle for
display:contents pseudo elements as the ComputedStyle for rendering uses
a display:inline with only properties inherited for the parent element.

Bug: 854563
Change-Id: I4dd3d99b0dee0b538645d005b36347b469799244
Reviewed-on: https://chromium-review.googlesource.com/1107802
Reviewed-by: Anders Ruud <andruud@chromium.org>
Commit-Queue: Rune Lillesveen <futhark@chromium.org>
Cr-Commit-Position: refs/heads/master@{#569204}
Former-commit-id: 0e13e93c4d942813878cf8f867e9a08e56e0547d